Fixed screen overflow bug

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  max-width: 21%;
 }
 
 header {
@@ -177,7 +178,6 @@ header {
   text-align: end;
   border-radius: 5px;
   padding: 15px;
-  width: 100%;
   overflow-x: auto;
 }
 
